Ensure font family loads on mobile site.

--- a/compositions_style.css
+++ b/compositions_style.css
@@ -102,6 +102,7 @@ h3 {
 .recording-link:link,
 .recording-link:visited{
   color:slategrey;
+  font-family: "Rubik", sans-serif;
   text-decoration: none;
   background-color: gainsboro;
   font-size: calc(5px + 1vw);
